# baby-games

./: .gitignore  README.md  consts.py  example_1.py  flashcard_game.py  math_blasters.py  pyproject.toml  requirements.txt  scrolling_shooter.py
baby_games/games/: flashcard_game.py  type_fighter.py
core/: utils.py
path/to/: file
static/: consts.py
static/type_fighter/: License.txt
