[project]
name = "baby-games"
version = "0.1.0"
description = "A collection of educational games for children"
authors = [
    {name = "Mike Zhong"}
]
dependencies = [
    "numpy>=1.22.0",
    "pdf2image>=1.11.0",
    "Pillow>=10.0.1",
    "pygame>=1.9.6",
    "pygame-menu==2.1.2",
    "pyperclip>=1.7.0",
]
requires-python = ">=3.11"

[project.scripts]
flashcard_game = "baby_games.games.flashcard_game:main"
mathblasters = "baby_games.games.math_blasters:main"
shooter = "baby_games.games.scrolling_shooter:main"
type_fighter = "baby_games.games.type_fighter:main"
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
target-version = "py311"

# Add this section to specify where our package files are
[tool.hatch.build.targets.wheel]
packages = ["."] 
